--- a/Lanchat.Avalonia/MainWindow.axaml
+++ b/Lanchat.Avalonia/MainWindow.axaml
@@ -2,8 +2,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="350"
         x:Class="Lanchat.Avalonia.MainWindow"
-        Title="Lanchat.Avalonia">
-    Welcome to Avalonia!
+        Title="Lanchat">
+    <TabControl>
+        <TabItem Header="Lanchat">
+            <Grid ColumnDefinitions="*" RowDefinitions="*,50">
+                <ScrollViewer Grid.Row="0">
+                    <StackPanel>
+
+                    </StackPanel>
+                </ScrollViewer>
+                <TextBox Grid.Row="1" DockPanel.Dock="Bottom" Margin="0 10 0 10" />
+            </Grid>
+        </TabItem>
+        <TabItem>
+            <TabItem.Header>
+                <TextBlock>Settings</TextBlock>
+            </TabItem.Header>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Settings"  />
+            </StackPanel>
+        </TabItem>
+    </TabControl>
+
+
 </Window>
